<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>OctaExportUi</class>
 <widget class="QMainWindow" name="OctaExportUi">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>864</width>
    <height>616</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>OctaExport</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QTreeView" name="treeView">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>131</width>
      <height>271</height>
     </rect>
    </property>
   </widget>
   <widget class="QTreeView" name="treeView_2">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>270</y>
      <width>131</width>
      <height>281</height>
     </rect>
    </property>
   </widget>
   <widget class="QListView" name="listView">
    <property name="geometry">
     <rect>
      <x>130</x>
      <y>0</y>
      <width>661</width>
      <height>271</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
      <x>710</x>
      <y>530</y>
      <width>80</width>
      <height>22</height>
     </rect>
    </property>
    <property name="text">
     <string>Convert</string>
    </property>
   </widget>
   <widget class="QListView" name="listView_2">
    <property name="geometry">
     <rect>
      <x>130</x>
      <y>290</y>
      <width>661</width>
      <height>241</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
      <x>710</x>
      <y>270</y>
      <width>80</width>
      <height>22</height>
     </rect>
    </property>
    <property name="text">
     <string>Add</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
      <x>630</x>
      <y>530</y>
      <width>80</width>
      <height>22</height>
     </rect>
    </property>
    <property name="text">
     <string>Remove</string>
    </property>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>864</width>
     <height>19</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuMenu">
    <property name="title">
     <string>Menu</string>
    </property>
    <addaction name="separator"/>
    <addaction name="separator"/>
    <addaction name="actionExit"/>
   </widget>
   <widget class="QMenu" name="menuMode">
    <property name="title">
     <string>Mode</string>
    </property>
    <addaction name="actionFLAC_to_MP3_2"/>
    <addaction name="action44_1kHz_WAV"/>
   </widget>
   <addaction name="menuMenu"/>
   <addaction name="menuMode"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionOptions">
   <property name="text">
    <string>Options</string>
   </property>
  </action>
  <action name="actionExit">
   <property name="text">
    <string>Exit</string>
   </property>
  </action>
  <action name="actionFLAC_to_MP3">
   <property name="text">
    <string>FLAC to MP3</string>
   </property>
  </action>
  <action name="action44_1khz_WAV">
   <property name="text">
    <string>44.1khz WAV</string>
   </property>
  </action>
  <action name="actionFLAC_to_MP3_2">
   <property name="text">
    <string>FLAC to MP3</string>
   </property>
  </action>
  <action name="action44_1kHz_WAV">
   <property name="text">
    <string>44.1kHz WAV</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
